deploy/mighty-fine/might-fine-deploy.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mighty-fine
  namespace: dev
  annotations:
    flux.weave.works/tag.mighty-fine: glob:*
spec:
  replicas: 5
  selector:
    matchLabels:
      app: mighty-fine
  template:
    metadata:
      labels:
        app: mighty-fine
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: metrics-demo
        image: quay.io/brice/metrics-demo:master-a1560c8
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 2
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
