deploy/mighty-fine/might-fine-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  creationTimestamp: null
  name: mighty-fine
  namespace: dev
spec:
  rules: 
  - host: training-user-39.training.weave.works
    http:
      paths:
      - backend:
          serviceName: mighty-fine
          servicePort: 3000
        path: /mighty-fine
status:
  loadBalancer: {}
